src/objects/Appointment_Visit__c.object
<CustomObject>
    <description>Appointment /  Visit</description>
    <fields>
        <fullName>Appointment_Location__c</fullName>
        <description>Appointment Location</description>
        <inlineHelpText>Indicate physician office, hospital visit, home visit etc</inlineHelpText>
        <label>Appointment Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <inlineHelpText>List all in attendance at the appointment including the Injured Worker and Case Manager</inlineHelpText>
        <label>Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorization_for_Telephonic_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box must be completed by SDL or Supervisor authorizing telephonic follow-up for an appointment</inlineHelpText>
        <label>Authorization for Telephonic Follow-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_for_Telephonic_Follow_up_p__c</fullName>
        <label>Authorization for Telephonic Follow-up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Manager_Attended__c</fullName>
        <description>Case Manager Attended?</description>
        <inlineHelpText>Select from the drop-down</inlineHelpText>
        <label>Case Manager Attended?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes, case manager met with the physician separately</fullName>
                </value>
                <value>
                    <fullName>No, case manager met with the physician separately</fullName>
                </value>
                <value>
                    <fullName>No, Telephonic Follow Up</fullName>
                </value>
                <value>
                    <fullName>No, case manager followed up in person at a later time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Report_Opportunity__c</fullName>
        <label>Case Report / Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Appointments / Visits</relationshipLabel>
        <relationshipName>Doctor_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Medications__c</fullName>
        <description>Current Medications</description>
        <inlineHelpText>Provide names of all current medications prescribed by ALL treating physicians. Address dosage &amp; frequency in the Treatment Plan &quot;Regarding Medications&quot; 
Non-industrial medications should also be listed here, dosage &amp; frequency noted in Treatment Plan</inlineHelpText>
        <label>Current Medications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_ER_Sent__c</fullName>
        <inlineHelpText>To be completed if applicable</inlineHelpText>
        <label>Date ER Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_QSU_Sent__c</fullName>
        <inlineHelpText>List the date the QSU was sent</inlineHelpText>
        <label>Date QSU Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Appointment_Visit__c</fullName>
        <description>Date of Appointment/Visit</description>
        <label>Date of Appointment/Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Met With:</description>
        <inlineHelpText>Office Visit:  Select Healthcare Provider (new providers need to be added via reports@isyscm.com / Hosptial Visit:  Select Hospital / Home Visit:  Select Employee Name  (Lookup Contact record and select)</inlineHelpText>
        <label>Physician/Facility:</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments / Visits</relationshipLabel>
        <relationshipName>Doctor_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employees_Current_Status__c</fullName>
        <description>Employees Current Status</description>
        <label>Employees Current Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Improving</fullName>
                </value>
                <value>
                    <fullName>Improving, but slow</fullName>
                </value>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Worsening</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employees_Medical_Assessment__c</fullName>
        <description>Employee&apos;s Medical Assessment</description>
        <inlineHelpText>Narrative of EE&apos;s complaints. Include EE&apos;s opinion of his recovery and description of symptoms.  NOT included are: reason for not attending appt, nature &amp; history of injury and anything other than the EE&apos;s own assessment.</inlineHelpText>
        <label>Employee&apos;s Medical Assessment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluated_By__c</fullName>
        <inlineHelpText>Individual who evaluated the Injured Worker at this appointment may be a PA or NP etc.</inlineHelpText>
        <label>Evaluated By:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IW_attended__c</fullName>
        <label>IW attended?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD_Findings_At_Exam__c</fullName>
        <description>MD Findings At Exam</description>
        <inlineHelpText>Narrative form; MD physical findings.  Include; range of motion, neuro testing, strength testing, treatment recommendations; prescription medications and physical therapy etc.</inlineHelpText>
        <label>MD Findings At Exam</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Appointment_Date_Time__c</fullName>
        <description>Next Appointment Date / Time</description>
        <inlineHelpText>Next visit with this provider</inlineHelpText>
        <label>Next Appointment Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Appointment_Not_Scheduled_because__c</fullName>
        <description>Next Appointment Not Scheduled because:</description>
        <label>Next Appointment Not Scheduled because:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>List all new changes to the treatment plan. Ex. Norco discontinued, Request for post-op cryotherapy, Request for CT scan etc.</inlineHelpText>
        <label>Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <inlineHelpText>What was the reason for this appointment/visit. Ex. routine reevaluation, pre-op, post-op, safety home visit, emergency/rush visit</inlineHelpText>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_not_attending__c</fullName>
        <inlineHelpText>If “No” option is selected, provide explanation as to why appointment/visit was not attended​

​</inlineHelpText>
        <label>Reason for not attending</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_DME_or_Other_Ancillary_Service__c</fullName>
        <description>Regarding DME/Home Health</description>
        <inlineHelpText>Indicate type of equipment or Home Health services (frequency and duration) being requested or Home Health services are prescribed indicate &quot;Not Applicable&quot;</inlineHelpText>
        <label>Regarding DME/Home Health</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Evidence_Based_Information__c</fullName>
        <description>Regarding Evidence Based Information</description>
        <inlineHelpText>Indicate evidence based criteria such as ACOEM and/or MTUS or credible medical research</inlineHelpText>
        <label>Regarding Evidence Based Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Medications__c</fullName>
        <description>Regarding Medications</description>
        <inlineHelpText>Dosage &amp; frequency of current medications prescribed or refilled for this industrial injury. 
For Standard Uniform provide names of all current meds w/dosage &amp; frequency. Include meds for non-industrial conditions that impact recovery &amp; file progression.</inlineHelpText>
        <label>Regarding Medications</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Other__c</fullName>
        <description>Regarding Other</description>
        <inlineHelpText>Indicate treatments that do not fall in another category.  If none indicate &quot;Not Applicable&quot;</inlineHelpText>
        <label>Regarding Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Physical_Therapy__c</fullName>
        <description>Regarding Therapy(s)</description>
        <inlineHelpText>Indicate frequency and duration of new therapy(s); traditional, alternative, chiropractic, request or whether continuation of previously authorized therapy is recommended.   If no therapy is prescribed, indicate &quot;Not Applicable&quot;</inlineHelpText>
        <label>Regarding Therapy(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Procedure_Authorization__c</fullName>
        <description>Procedures/Diagnostic Studies Authorizations</description>
        <inlineHelpText>Indicate non-surgical procedures (epidural injections, discogram) and diagnostic studies (x-ray, MRI, CT scan, ) that are requested or pending.  If none, indicate &quot;Not Applicable&quot;</inlineHelpText>
        <label>Procedures/Diagnostic Studies Auths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Regarding_Surgery_Authorization__c</fullName>
        <description>Regarding Surgery Authorization</description>
        <inlineHelpText>Indicate type of surgery being requested or pending.  If none write &quot;Not Applicable&quot;</inlineHelpText>
        <label>Regarding Surgery Authorization</label>
        <type>TextArea</type>
    </fields>
    <label>Appointment / Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AV-{000000}</displayFormat>
        <label>Appointment / Visit #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments / Visits</pluralLabel>
    <recordTypes>
        <fullName>New_Appointment_Visit</fullName>
        <active>true</active>
        <description>New A/V as of 11/19/18</description>
        <label>New - Appointment / Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sentry_Appointment_Visit</fullName>
        <active>true</active>
        <description>Record type used to create and maintain a Sentry Appointment / Visit</description>
        <label>Sentry - Appointment / Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Appointment_Visit</fullName>
        <active>true</active>
        <description>Record type used to create and maintain a Standard Appointment / Visit record</description>
        <label>Standard - Appointment / Visit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Error_Attended_Yes</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Case_Manager_Attended__c ,&quot;Yes&quot;)
&amp;&amp; !ISBLANK(Reason_for_not_attending__c)</errorConditionFormula>
        <errorDisplayField>Reason_for_not_attending__c</errorDisplayField>
        <errorMessage>Error! Reason for not attending should be blank if Case Manager Attended is Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Missing</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Case_Manager_Attended__c ,&quot;No, Telephonic Follow Up&quot;) &amp;&amp;  ISBLANK(Reason_for_not_attending__c)</errorConditionFormula>
        <errorDisplayField>Reason_for_not_attending__c</errorDisplayField>
        <errorMessage>Error! Field missing - Reason for not attending must be completed</errorMessage>
    </validationRules>
</CustomObject>